# drone-patrolling

./: README.md
src/drone_control/: CMakeLists.txt  package.xml
src/drone_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/drone_control/install/drone_control/lib/drone_control/: drone_commander
src/drone_control/install/drone_control/share/drone_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/drone_control/install/drone_control/share/drone_control/cmake/: drone_controlConfig.cmake
src/drone_control/src/: drone_manager.cpp  ground_control_node.cpp  send_command_template.cpp
